deployment/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discordsoundboard-deployment-backend
  labels:
    app: discordsoundboard
    tier: backend
spec:
  selector:
    matchLabels:
      app: discordsoundboard
      tier: backend
  template:
    metadata:
      labels:
        app: discordsoundboard
        tier: backend
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: discordsoundboard
          image: ghcr.io/ggresillion/discordsoundboard_backend:1.0.6
          ports:
            - containerPort: 8080
