deployment/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discordsoundboard-deployment-frontend
  labels:
    app: discordsoundboard
    tier: frontend
spec:
  selector:
    matchLabels:
      app: discordsoundboard
      tier: frontend
  template:
    metadata:
      labels:
        app: discordsoundboard
        tier: frontend
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: discordsoundboard
          image: ghcr.io/ggresillion/discordsoundboard_frontend:1.0.10
          ports:
            - containerPort: 3000
