deployment/service-backend.yaml

apiVersion: v1
kind: Service
metadata:
  name: discordsoundboard-service-backend
spec:
  selector:
    app: discordsoundboard
    tier: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
