deployment/service-frontend.yaml

apiVersion: v1
kind: Service
metadata:
  name: discordsoundboard-service-frontend
spec:
  selector:
    app: discordsoundboard
    tier: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      name: http
